--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="home">
       <ion-icon name="Home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="gallery">
       <ion-icon name="images"></ion-icon>
       <ion-label>Photos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="more">
       <ion-icon name="Settings"></ion-icon>
-      <ion-label>About</ion-label>
+      <ion-label>More</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
